--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Talabaty Shop</title>
+  <title>Talabaty</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
   <link href="/vendor/jquery-nice-select//css/nice-select.css" rel="stylesheet">
   <link href="/vendor/bootstrap-select/dist//css/bootstrap-select.min.css" rel="stylesheet">
